# diploma_work_2024

./: .gitattributes  .gitignore  KNOWLEDGE_&_LINGUISTIC_GRAPH.ipynb  SYNTACTIC_GRAPH.ipynb  Social_Network.ipynb  pyproject.toml
src/AuthorshipVerification-GraphBasedSiameseNetwork/: pyproject.toml
src/AuthorshipVerification-GraphBasedSiameseNetwork/PAN_datasets/pan22-author-verification/training/original_ds/: pan22-authorship-verification-training-truth.jsonl  pan22-authorship-verification-training.jsonl
src/AuthorshipVerification-GraphBasedSiameseNetwork/codes/: common_func.py  dataset_to_graph.py  datasets_PAN.py  siamese_graph_trainer.py
src/AuthorshipVerification-GraphBasedSiameseNetwork/codes/cfg/: GBSN_test.yml
src/AuthorshipVerification-GraphBasedSiameseNetwork/data/PAN22_text_split/22-train/: 01_dataset_to_texts_dict.txt  02_define_clean_dataframe.txt  03_define_ids_partition-authors.txt  05_define_splits_indexes.txt  05_verify_splits.txt  ds_list_test.pkl  ds_list_test_n.pkl  ds_list_train.pkl  ds_list_train_n.pkl  ds_list_val.pkl  ds_list_val_n.pkl
src/AuthorshipVerification-GraphBasedSiameseNetwork/data/PAN22_text_split/22-train/clean/: ds_list_clean.pkl  stats_dict_clean.pkl
src/AuthorshipVerification-GraphBasedSiameseNetwork/data/PAN22_text_split/22-train/partitions/: ids_splits.pkl  part_splits.pkl  partition-authors.pkl
src/AuthorshipVerification-GraphBasedSiameseNetwork/data/PAN22_text_split/22-train/to_texts_dict/: stats_dict.pkl
src/getting_texts_with_origs/: __main__.py  crawled.csv  fanfic_combiner.py  origs.csv  scraper.py  to_jsonl.py  (+4 more)
(+18289 files in other folders)
