[project]
name = ""
version = ""
description = ""
authors = [
    {name = "AcipenserSturio", email = "AcipenserSturio@users.noreply.github.com"},
]
dependencies = [
    "scipy>=1.11.4",
    "seaborn>=0.13.0",
    "tqdm>=4.66.1",
    "tabulate>=0.9.0",
    "tensorboard>=2.15.1",
    "jsonlines>=4.0.0",
    "unidecode>=1.3.7",
    "nltk>=3.8.1",
    "torch-geometric>=2.4.0",
    "pyyaml>=6.0.1",
    "torch>=2.1.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-cluster>=1.6.3",
    "torch-spline-conv>=1.2.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

